<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_date"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:boxStrokeColor="@color/til_color"
                app:boxStrokeWidth="5dp"
                app:boxStrokeWidthFocused="5dp"
                app:counterOverflowTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditType"
                app:layout_constraintTop_toBottomOf="@+id/creditDate"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/credit_type">

                <AutoCompleteTextView
                    android:id="@+id/creditTypeTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditSum"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/creditType"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/credit_sum_of_credit"
                app:boxStrokeColor="@color/til_color"
                app:boxStrokeWidth="5dp"
                app:boxStrokeWidthFocused="5dp"
                app:counterOverflowTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditRange"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/creditSum"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/credit_range"
                app:boxStrokeColor="@color/til_color"
                app:boxStrokeWidth="5dp"
                app:boxStrokeWidthFocused="5dp"
                app:counterOverflowTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/creditPercent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/creditRange"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:hint="@string/credit_percent"
                app:boxStrokeColor="@color/til_color"
                app:boxStrokeWidth="5dp"
                app:boxStrokeWidthFocused="5dp"
                app:counterOverflowTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/creditAdditionalTerm"
                    android:text="@string/credit_conditions"
                    app:layout_constraintTop_toBottomOf="@id/creditPercent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/creditAdditionalTermSwitch"
                    app:layout_constraintRight_toLeftOf="@id/creditAdditionalTermSwitch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/creditAdditionalTermSwitch"
                    app:layout_constraintTop_toBottomOf="@id/creditPercent"
                    app:layout_constraintLeft_toRightOf="@id/creditAdditionalTerm"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/termsBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="creditAdditionalTerm, creditAdditionalTermSwitch" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/creditCalculateButton"
                app:layout_constraintTop_toBottomOf="@id/termsBarrier"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_calculate"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Это основной экран"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>